# dataforge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/customer_segmentation/models/marts/: customer_segments.sql  schema.yml
examples/data_freshness/: README.md  query.sql
examples/monthly_revenue/: README.md
examples/monthly_revenue/models/marts/: monthly_revenue_by_category.sql  schema.yml
skills/: dataforge-generate.md
src/dataforge/: __init__.py  __main__.py  agent.py  cli.py  context.py  mcp_context.py  prompts.py  server.py
src/dataforge/generators/: dbt.py
tests/: test_agent.py  test_context.py  test_generators.py
