[project]
name = "dataforge"
version = "0.1.0"
description = "Metadata-aware code generator powered by DataHub — generates production-ready dbt models, SQL transforms, and ETL code grounded in real schemas, lineage, and documentation."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dataforge = "dataforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.ruff]
line-length = 100
